fix sigapo imgs

--- a/static/sass/partials/_singpore.sass
+++ b/static/sass/partials/_singpore.sass
@@ -147,9 +147,11 @@
       .middle-tut4
         background: url("/static/imgs/pc_activity/singapore/singapore_tut3.jpg") no-repeat center
       .middle-tut5
-        background: url("/static/imgs/pc_activity/singapore/singapore_tu16.jpg") no-repeat center
+        background: url("/static/imgs/pc_activity/singapore/singapore_tu16.jpg?v=2") no-repeat center
       .middle-tut17
         background: url("/static/imgs/pc_activity/singapore/singapore_tu17.jpg") no-repeat center
+      .middle-tut18
+        background: url("/static/imgs/pc_activity/singapore/singapore_tu18.jpg?v=12") no-repeat center
       dd
         text-align: center
         line-height: 30px
@@ -168,10 +170,10 @@
         background: url("/static/imgs/pc_activity/singapore/singapore_tu13.jpg") no-repeat center
       .middle-tu14
         height: 381px
-        background: url("/static/imgs/pc_activity/singapore/singapore_tu14.jpg") no-repeat center
+        background: url("/static/imgs/pc_activity/singapore/singapore_tu14.jpg?v=2") no-repeat center
       .middle-tu15
         height: 381px
-        background: url("/static/imgs/pc_activity/singapore/singapore_tu15.jpg") no-repeat center
+        background: url("/static/imgs/pc_activity/singapore/singapore_tu15.jpg?v=22") no-repeat center
       dd
         text-align: center
         line-height: 40px
